Added Formspree action

--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 mt-6 p-5">
-                <form>
+                <form action="https://formspree.io/f/moqorjgz" method="POST">
                     <div class="mb-4">
                         <input type="text" class="form-control form-control-lg" placeholder="Name" name="name">
                     </div>
